--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,8 +22,8 @@
   {% include twitter-meta.html %}
 
   <link href='https://fonts.googleapis.com/css?family=Mrs+Saint+Delafield|Merriweather:300italic,700,300,700italic|Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="{{ "/css/screen.css" | prepend: site.github.url | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/prism.css" | prepend: site.github.url | prepend: site.baseurl }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.github.url | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/screen.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/prism.css" | prepend: site.baseurl }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl }}">
 
 </head>
