--- a/_includes/ogp.html
+++ b/_includes/ogp.html
@@ -13,13 +13,13 @@
 {% assign cover = site.cover %}
 {% endif %}
 {% if cover %}
-<meta property="og:image" content="{{cover | prepend: site.github.url | prepend: site.baseurl }}" />
+<meta property="og:image" content="{{ cover }}" />
 {% endif %}
 
 <meta property="og:site_name" content="{{ site.title | escape }}" />
 <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
 
-{% capture page_url %}{{ page.url | replace:'/index.html','/' | prepend: site.github.url | prepend: site.baseurl }}{% endcapture %}
+{% capture page_url %}{{ page.url | replace: '/index.html','/' }}{% endcapture %}
 <meta property="og:url" content="{{ page_url }}" />
 
   {% if site.data.authors and site.data.authors[page.author] %}
