--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -15,17 +15,17 @@ layout: headless
   {% endunless %}
 {% endfor %}
 
-<a href="{{ site.github.url | prepend: site.baseurl }}/" class="logo-readium"><span class="logo">{{ author.initial | slice: 0, 2 }}</span></a>
+<a href="{{ site.github.url }}/" class="logo-readium"><span class="logo">{{ author.initial | slice: 0, 2 }}</span></a>
 
 <section class="author-profile" itemprop="author" itemscope itemtype="http://schema.org/Person">
   {% if author.cover %}
-  <div class="author-cover image-bg" style="background-image: url('{{author.cover | prepend: site.github.url | prepend: site.baseurl}}')"></div>
+  <div class="author-cover image-bg" style="background-image: url('{{ author.cover | prepend: site.baseurl }}')"></div>
   {% endif %}
 
   {% if author.picture %}
   <figure class="author-image {% if author.cover %} has-cover {% endif %}">
-    <div class="img image-bg" style="background-image: url({{ author.picture | prepend: site.github.url | prepend: site.baseurl }})">
-      <a class="hidden" href="{{author.picture | prepend: site.github.url | prepend: site.baseurl}}" itemprop="image">{{author.name}}'s Picture</a>
+    <div class="img image-bg" style="background-image: url({{ author.picture | prepend: site.baseurl }})">
+      <a class="hidden" href="{{ author.picture | prepend: site.baseurl }}" itemprop="image">{{author.name}}'s Picture</a>
     </div>
   </figure>
   {% endif %}
