--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,6 @@
   </div>
 </body>
 
-<script src="{{ site.github.url | prepend: site.baseurl }}/js/global.js"></script>
+<script src="{{ site.baseurl }}/js/global.js"></script>
 </script>
 </html>
