--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
   {% include ogp.html %}
   {% include twitter-meta.html %}
 
-  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/web-optim.ico">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico">
   <link href='https://fonts.googleapis.com/css?family=Mrs+Saint+Delafield|Merriweather:300italic,700,300,700italic|Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ "/css/screen.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/prism.css" | prepend: site.baseurl }}">
