--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -62,7 +62,7 @@
         font-size: 18px;
         font-weight: normal;
         font-style: italic;
-        font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;
+        // font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;
         color: rgba($color-text-header, 0.8);
     }
 }
