--- a/_sass/about-page.scss
+++ b/_sass/about-page.scss
@@ -16,7 +16,7 @@
         left: 8px;
         width: 32px;
         height: 32px;
-        font-family: 'Open Sans', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;
+        // font-family: 'Open Sans', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;
         font-size: 30px;
         font-weight: 600;
         text-decoration: none;
