--- a/_sass/general.scss
+++ b/_sass/general.scss
@@ -11,12 +11,12 @@ html {
 body {
     height: 100%;
     max-height: 100%;
-    font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;
+    // font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;
     letter-spacing: 0.01rem;
     font-size: $size-font-normal;
     line-height: 1.75em;
     color: $color-text-normal;
-    font-feature-settings: 'kern' 1;
+    // font-feature-settings: 'kern' 1;
     text-rendering: geometricPrecision;
     text-align: center;
 }
@@ -35,11 +35,11 @@ h3,
 h4,
 h5,
 h6 {
-    font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
+    // font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     color: $color-text-header;
     line-height: 1.15em;
     margin: 0 0 0.7em 0;
-    font-family: 'Open Sans', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;
+    // font-family: 'Open Sans', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;
     text-rendering: geometricPrecision;
 }
 
@@ -85,7 +85,7 @@ p,
 ul,
 ol,
 dl {
-    font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
+    // font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
     margin: 0 0 1.75em 0;
     text-rendering: geometricPrecision;
 }
@@ -237,4 +237,3 @@ margin on the iframe, cause it breaks stuff. */
 .fluid-width-video-wrapper iframe {
     margin: 0;
 }
-
