--- a/_includes/twitter-meta.html
+++ b/_includes/twitter-meta.html
@@ -1,28 +1,30 @@
 <!-- Twitter data -->
 {% if site.data.authors and site.data.authors[page.author] %}
-{% assign author = site.data.authors.[page.author] %}
+{%   assign author = site.data.authors.[page.author] %}
 {% elsif site.data.authors %}
-{% assign author = site.data.authors['default'] %}
+{%   assign author = site.data.authors['default'] %}
 {% endif %}
 
 <meta name="twitter:card" content="summary">
 
 {% if author.twitter %}
-<meta name="twitter:site" content="@{{ author.twitter}}">
-{% endif %}
-
-{% if page.title %}
-<meta name="twitter:title" content="{{ page.title }}">
+<meta name="twitter:site" content="@{{ author.twitter }}">
 {% else %}
-<meta name="twitter:title" content="{{ site.title }}">
+<meta name="twitter:site" content="@tex2e">
 {% endif %}
 
 {% if page.url %}
 {% capture page_url %}{{ page.url | replace: '/index.html','/' }}{% endcapture %}
-<meta name="twitter:url" content="{{ page_url}}">
+<meta property="og:url" content="{{ page_url }}">
 {% endif %}
 
-<meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+{% if page.title %}
+<meta property="og:title" content="{{ page.title }}">
+{% else %}
+<meta property="og:title" content="{{ site.title }}">
+{% endif %}
 
-<meta name="twitter:image:src" content="{{ cover }}">
+<meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+
+<meta property="og:image" content="/assets/web-optim.png">
 <!-- End: Twitter data -->
