--- a/_includes/ogp.html
+++ b/_includes/ogp.html
@@ -13,7 +13,7 @@
 {% assign cover = site.cover %}
 {% endif %}
 {% if cover %}
-<meta property="og:image" content="{{ cover }}" />
+<meta property="og:image" content="/assets/web-optim.png" />
 {% endif %}
 
 <meta property="og:site_name" content="{{ site.title | escape }}" />
