--- a/_includes/twitter-meta.html
+++ b/_includes/twitter-meta.html
@@ -26,5 +26,5 @@
 
 <meta property="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-<meta property="twitter:image" content="/assets/web-optim.png">
+<meta property="twitter:image" content="/blog/assets/web-optim.png">
 <!-- End: Twitter data -->
