--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,4 +35,8 @@
     ga('create', 'UA-75892425-1', 'auto');
     ga('send', 'pageview');
   </script>
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+  </script>
+  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS_HTML-full"></script>
 </head>
