update image size

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -11,9 +11,9 @@
 }
 
 .single-post {
-    .post-content img, .post-title , .post-meta{
+    .post-content img, .post-title , .post-meta {
         max-width: 700px;
-        width: 100%;
+        // width: 100%;
         margin: auto;
     }
 
