--- a/_sass/prism.scss
+++ b/_sass/prism.scss
@@ -108,7 +108,7 @@ pre {
 .language-css .token.string,
 .style .token.string {
     color: #a67f59;
-    background: hsla(0, 0%, 100%, .5);
+    // background: hsla(0, 0%, 100%, .5);
 }
 
 .token.atrule,
