--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -12,7 +12,8 @@
 
 .single-post {
     .post-content img, .post-title , .post-meta {
-        max-width: 700px;
+        // max-width: 700px;
+        max-width: 600px;
         // width: 100%;
         margin: auto;
     }
