--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,5 +35,15 @@
     ga('create', 'UA-75892425-1', 'auto');
     ga('send', 'pageview');
   </script>
+
   <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS_HTML-full"></script>
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      messageStyle: "none",
+      tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
+      "HTML-CSS": {
+        fonts: ["TeX", "Gyre-Pagella"]
+      },
+    });
+  </script>
 </head>
