--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,12 @@
   <link rel="stylesheet" href="{{ "/css/screen.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/prism.css" | prepend: site.baseurl }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl }}">
+  <!-- fix prism.css -->
+  <style type="text/css">
+    .token.operator {
+      background: none;
+    }
+  </style>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
