mathjax font family for Hiragana and Kanji

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,7 +48,8 @@
       messageStyle: "none",
       tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
       "HTML-CSS": {
-        fonts: ["TeX", "Gyre-Pagella"]
+        fonts: ["TeX", "Gyre-Pagella"],
+        undefinedFamily: "'Raleway', Helvetica, Arial, sans-serif"
       },
     });
   </script>
