sass: comment out

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -166,7 +166,7 @@
 }
 
 .go-to-top {
-    background-image: url('../assets/go-to-top.png');
+    // background-image: url('../assets/go-to-top.png');
     width: 40px;
     height: 40px;
     position: fixed;
