--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,24 +14,22 @@
   <meta name="keywords" content="{{ site.keywords | split: ' ' | join: ', ' | escape }}" />
   {% endif %}
 
-  <meta name="HandheldFriendly" content="True">
-  <meta name="robots" content="index,follow">
-  <meta name="googlebot" content="index,follow">
-
   {% include ogp.html %}
   {% include twitter-meta.html %}
 
   <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico">
-  <!-- <link href='https://fonts.googleapis.com/css?family=Mrs+Saint+Delafield|Merriweather:300italic,700,300,700italic|Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
-  <link rel="stylesheet" href="{{ "/css/screen.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/prism.css" | prepend: site.baseurl }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl }}">
-  <!-- fix prism.css -->
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/prism.css">
+
+  <!-- Fix prism.css -->
   <style type="text/css">
     .token.operator {
       background: none;
     }
   </style>
+
+  <!-- RSS -->
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl }}">
 
   {% if jekyll.environment == "production" %}
   <script>
