--- a/_includes/ogp.html
+++ b/_includes/ogp.html
@@ -13,3 +13,8 @@
 <meta property="og:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url | replace: '/index.html','/' }}" />
 <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
 <!-- End: Open Graph data -->
+<!-- Twitter data -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@tex2e">
+<meta name="twitter:creator" content="@tex2e">
+<!-- End: Twitter data -->
