--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,8 @@
   <button class="go-to-top"></button>
   <p class="copyright">
     <a href="{{ site.baseurl }}" title="{{ site.title }}">{{ site.title }}</a> &copy; {{ site.time | date: '%Y' }} |
-    <a href="{{ "/feed.xml" | prepend: site.baseurl }}" title="RSS Feed">RSS Feed</a> |
-    <a href="{{ "/privacy/" | prepend: site.baseurl }}" title="Privacy Policy">Privacy Policy</a> |
-    <a href="{{ "/offline-warning/" | prepend: site.baseurl }}" title="Offline">Offline</a>
+    <a href="{{ site.baseurl }}{{ "/feed.xml" }}" title="RSS Feed">RSS Feed</a> |
+    <a href="{{ site.baseurl }}{{ "/privacy/" }}" title="Privacy Policy">Privacy Policy</a>
   </p>
   <p class="poweredby">powered by <a href="https://jekyllrb.com/" title="Jekyll">Jekyll</a> with the <a href="https://github.com/jwillmer/jekyllDecent" title="jekyllDecent Theme">jekyllDecent</a> theme</p>
 </footer>
