--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
   class="main-header detail-page image-bg {% if cover %} has-cover"
   style="background-image: url({{ cover | prepend: site.baseurl }})" {% else %} no-cover" {% endif %}
 >
-  <h1 class="page-title"><a href="{{ site.github.url }}/" title="{{ site.title }}">{{ site.title }}</a></h1>
+  <h1 class="page-title"><a href="{{ site.baseurl }}/" title="{{ site.title }}">{{ site.title }}</a></h1>
   <h2 class="page-description">{{ site.subtitle }}</h2>
   <div class="nav">
     <ul>
