--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
         <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
         on
         {% for tag in page.tags limit:5 %}
-        <span>{{ tag }}</span>
+        <span><a href="{{ site.baseurl }}/#{{ tag | uri_escape | downcase | slugify }}">{{ tag }}</a></span>
         {% endfor %}
       </section>
     </header>
