change post title font to small

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -15,7 +15,7 @@
         max-width: 600px;
         margin: auto;
     }
-    .post-title , .post-meta {
+    .post-title, .post-meta {
         // width: 100%;
         max-width: 700px;
         margin: auto;
@@ -33,9 +33,9 @@
         }
     }
 
-    .post-title {
-        font-size: 4rem;
-    }
+    // .post-title {
+    //     font-size: 4rem;
+    // }
 
     .large {
         img {
