--- a/_includes/head.html
+++ b/_includes/head.html
@@ -46,6 +46,7 @@
   -->
 
   <!-- KaTeX -->
+  {% if page.latex %}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
   <!-- The loading of KaTeX is deferred to speed up page rendering -->
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
@@ -78,6 +79,7 @@
     // });
   });
   </script>
+  {% endif %}
 
   {% if jekyll.environment == "production" %}
   <script>
