--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,30 +20,8 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/prism.css">
 
-  <!-- Fix prism.css -->
-  <style type="text/css">
-    .token.operator {
-      background: none;
-    }
-  </style>
-
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl }}">
-
-  <!-- MathJax -->
-  <!--
-  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS_HTML-full"></script>
-  <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-      messageStyle: "none",
-      tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
-      "HTML-CSS": {
-        fonts: ["TeX", "Gyre-Pagella"],
-        undefinedFamily: "'Raleway', Helvetica, Arial, sans-serif"
-      },
-    });
-  </script>
-  -->
 
   <!-- KaTeX -->
   {% if page.latex %}
@@ -59,24 +37,9 @@
       delimiters: [
         {left: "$$", right: "$$", display: true},
         {left: "$", right: "$", display: false},
-        {left: "\\(", right: "\\)", display: false},
-        {left: "\\[", right: "\\]", display: true}
       ]
     });
-
-    // $("script[type='math/tex']").replaceWith(function() {
-    //     var tex = $(this).text();
-    //     return katex.renderToString(tex, {
-    //       displayMode: false, throwOnError: false
-    //     });
-    // });
-    //
-    // $("script[type='math/tex; mode=display']").replaceWith(function() {
-    //     var tex = $(this).html();
-    //     return katex.renderToString(tex.replace(/%.*/g, ''), {
-    //       displayMode: true, throwOnError: false
-    //     });
-    // });
+    console.log('KaTeX done!');
   });
   </script>
   {% endif %}
