--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,9 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl }}">
 
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
   <!-- KaTeX -->
   {% if page.latex %}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
@@ -31,12 +34,30 @@
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"></script>
   <script>
   document.addEventListener("DOMContentLoaded", function() {
+    $("script[type='math/tex']").replaceWith(
+      function () {
+        var tex = $(this).text();
+        return "<span class=\"inline-equation kdmath\">$" +
+               tex +
+               "$</span>";
+    });
+
+    $("script[type='math/tex; mode=display']").replaceWith(
+      function () {
+        var tex = $(this).text();
+        tex = tex.replace('% <![CDATA[', '').replace('%]]>', '')
+        return "<div class=\"equation kdmath\">$$" +
+               tex +
+               "$$</div>";
+    });
+
     renderMathInElement(document.body, {
       delimiters: [
         {left: "$$", right: "$$", display: true},
         {left: "$", right: "$", display: false},
       ]
     });
+
     console.log('KaTeX done!');
   });
   </script>
