--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,18 +37,14 @@
     $("script[type='math/tex']").replaceWith(
       function () {
         var tex = $(this).text();
-        return "<span class=\"inline-equation kdmath\">$" +
-               tex +
-               "$</span>";
+        return "<span class=\"inline-equation kdmath\">$" + tex + "$</span>";
     });
 
     $("script[type='math/tex; mode=display']").replaceWith(
       function () {
         var tex = $(this).text();
-        tex = tex.replace('% <![CDATA[', '').replace('%]]>', '')
-        return "<div class=\"equation kdmath\">$$" +
-               tex +
-               "$$</div>";
+        tex = tex.replace('% <![CDATA[', '').replace('%]]>', '');
+        return "<div class=\"equation kdmath\">$$" + tex + "$$</div>";
     });
 
     renderMathInElement(document.body, {
