--- a/_includes/post_scripts.html
+++ b/_includes/post_scripts.html
@@ -17,7 +17,7 @@
 <script type="text/javascript">
   Prism.languages.bash.prompt = /^\$ /m; // 字句解析でPromptの部分もtokenにする
 
-  Prism.languages.vb = Prism.languages.dotnet; // Markdownで言語を「vb」としたときに、Prism.jsの「dotnet」を適用する
+  Prism.languages.vb = Prism.languages.vbnet; // Markdownで言語を「vb」としたときに、Prism.jsの「vbnet」を適用する
 </script>
 
 <style>
