improve page speed

--- a/_includes/post_scripts.html
+++ b/_includes/post_scripts.html
@@ -1,9 +1,13 @@
 
 <script src="{{ site.baseurl }}/js/jquery-1.12.0.min.js"></script>
-<script src="{{ site.baseurl }}/js/jquery.fitvids.js"></script>
+<!-- <script src="{{ site.baseurl }}/js/jquery.fitvids.js"></script> -->
+{% if page.syntaxhighlight != false %}
 <script src="{{ site.baseurl }}/js/prism.js"></script>
+{% endif %}
+{% if page.photoswipe %}
 <script src="{{ site.baseurl }}/js/photoswipe.js"></script>
 <script src="{{ site.baseurl }}/js/photoswipe-ui-default.js"></script>
+{% endif %}
 <script src="{{ site.baseurl }}/js/post.js"></script>
 
 <!-- Disqus -->
@@ -14,6 +18,7 @@
 </script>
 
 <!-- Prism -->
+{% if page.syntaxhighlight != false %}
 <script type="text/javascript">
   Prism.languages.bash.prompt = /^\$ /m; // 字句解析でPromptの部分もtokenにする
 
@@ -26,3 +31,4 @@
     user-select: none;
   }
 </style>
+{% endif %}
