--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,9 @@
 
   <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
+  {% if page.syntaxhighlight != false %}
   <link rel="stylesheet" href="{{ site.baseurl }}/css/prism.css">
+  {% endif %}
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl }}">
