--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
   {% if page.syntaxhighlight != false %}
   <link rel="stylesheet" href="{{ site.baseurl }}/css/prism.css">
+  <style type="text/css">
+    .token.operator { background: none; }
+  </style>
   {% endif %}
 
   <!-- RSS -->
