--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,11 +5,15 @@
 
   <title>{% if page.title %}{{ page.title | strip_html | escape }} | {{ site.title | strip_html | escape }}{% else %}{{ site.title | strip_html | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico">
 
+  <!-- Open Graph data, Twitter data -->
   {% include ogp.html %}
 
-  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico">
+  <!-- CSS: Main -->
   <link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
+
+  <!-- CSS: Syntax Highlight -->
   {% if page.syntaxhighlight != false %}
   <link rel="stylesheet" href="{{ site.baseurl }}/css/prism.css">
   <style type="text/css">
@@ -23,33 +27,16 @@
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  {% if page.latex %}
   <!-- KaTeX -->
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous"> -->
-  <!-- <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script> -->
-  <!-- Automatically render math in text elements -->
-  <!-- <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"></script> -->
-
+  {% if page.latex %}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css"
     integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js"
     integrity="sha384-g7c+Jr9ZivxKLnZTDUhnkOnsh30B4H0rpLUpJ4jAIKs4fnJI+sEnkvrMWph2EDg4" crossorigin="anonymous"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js"
     integrity="sha384-mll67QQFJfxn0IYznZYonOWZ644AWYC+Pt2cHqMaRhXVrursRwvLnLaebdGIlYNa" crossorigin="anonymous"></script>
-
   <script>
   document.addEventListener("DOMContentLoaded", function () {
-    // $("script[type='math/tex']").replaceWith(function () {
-    //   var tex = $(this).text();
-    //   return "<span class=\"kdmath\">$" + tex + "$</span>";
-    // });
-
-    // $("script[type='math/tex; mode=display']").replaceWith(function () {
-    //   var tex = $(this).text();
-    //   tex = tex.replace('% <![CDATA[', '').replace('%]]>', '');
-    //   return "<div class=\"kdmath\">$$" + tex + "$$</div>";
-    // });
-
     renderMathInElement(document.body, {
       delimiters: [
         { left: "$$", right: "$$", display: true },
@@ -62,6 +49,7 @@
   </script>
   {% endif %}
 
+  <!-- Google Analytics -->
   {% if jekyll.environment == "production" %}
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
