update css and js

--- a/_sass/icon.scss
+++ b/_sass/icon.scss
@@ -13,7 +13,7 @@
 /* Apply these base styles to all icons */
 [class^="icon-"]:before, [class*=" icon-"]:before {
     font-family: "casper-icons", "Open Sans", sans-serif;
-    speak: none;
+    //speak: none;
     font-style: normal;
     font-weight: normal;
     font-variant: normal;
