--- a/_sass/index-page.scss
+++ b/_sass/index-page.scss
@@ -7,7 +7,7 @@
     margin-left: auto;
     margin-right: auto;
     word-wrap: break-word;
-    margin-bottom: 50px;
+    margin-bottom: 20px; //50px;
     padding: 0;
 
     li {
@@ -37,5 +37,88 @@
             margin-top: 7px;
             margin-bottom: 0;
         }
+    }
+}
+
+// --- My Custom CSS -----------------------------------------------------------
+
+h3.category-title {
+    padding: 1.2em 0 0 0;
+}
+
+// Navigation
+nav {
+    // visibility: hidden;
+    // display: none;
+    opacity: 1;
+    position: fixed;
+    right: 10px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+    text-align: right;
+    z-index: 100;
+    // -webkit-transition: all 0.3s;
+    // -moz-transition: all 0.3s;
+    // -ms-transition: all 0.3s;
+    // -o-transition: all 0.3s;
+    // transition: all 0.3s;
+}
+nav.active {
+    opacity: 0;
+}
+nav a {
+    display: block;
+    line-height: 13px; //25px;
+    position: relative;
+    padding-right: 16px; //20px;
+    font-size: 12px;
+    color: rgba(50, 50, 50, 0.9);
+    text-decoration: none;
+}
+nav a:hover,
+nav a:visited,
+nav a:active {
+    text-decoration: none;
+}
+nav a:hover .nav-label {
+    opacity: 1;
+    visibility: visible;
+    color: rgba(50, 50, 50, 0.9);
+}
+nav .nav-dot {
+    display: block;
+    width: 3px;
+    height: 3px;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    background-color: rgba(50, 50, 50, 0.9);
+    border-radius: 100%;
+}
+nav .nav-dot.active {
+    width: 6px;
+    height: 6px;
+    background-color: rgb(36, 141, 43);
+}
+nav .nav-label {
+    display: block;
+    opacity: 0.5;
+    -webkit-transition: all 0.2s cubic-bezier(.17, .67, .83, .67);
+            transition: all 0.2s cubic-bezier(.17, .67, .83, .67);
+}
+nav ul {
+    margin: 0;
+    padding: 0;
+}
+nav li {
+    width: auto;
+    list-style: none;
+}
+
+@media screen and (max-width:850px) {
+    nav {
+        visibility: hidden;
     }
 }
