--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   <button class="go-to-top"></button>
   <p class="copyright">
-    <a href="{{ site.baseurl }}" title="{{ site.title }}">{{ site.title }}</a> &copy; {{ site.time | date: '%Y' }} |
+    <a href="{{ site.baseurl }}/" title="{{ site.title }}">{{ site.title }}</a> &copy; {{ site.time | date: '%Y' }} |
     <a href="{{ site.baseurl }}/feed.xml" title="RSS Feed">RSS Feed</a> |
     <a href="{{ site.baseurl }}/privacy/" title="Privacy Policy">Privacy Policy</a> |
     <a href="{{ site.baseurl }}/about/" title="About">About</a> |
