--- a/_includes/post_scripts.html
+++ b/_includes/post_scripts.html
@@ -27,6 +27,13 @@
 {% if page.syntaxhighlight != false %}
 <script type="text/javascript">
   Prism.languages.bash.prompt = /^\$ /m; // Bashの字句解析でPromptの部分「$」もtokenにする
+  // PowerShellの字句解析でPromptの部分「PS>」もtokenにする
+  //（デフォルトだとPSがfunctionと判定されるので、insertBeforeで先に評価する）
+  Prism.languages.insertBefore('powershell', 'function', {
+    'prompt': {
+      pattern: /^PS> /m
+    }
+  })
   Prism.languages.vb = Prism.languages.vbnet; // Markdownで言語を「vb」としたときに、Prism.jsの「vbnet」を適用する
 </script>
 
