--- a/_includes/post_scripts.html
+++ b/_includes/post_scripts.html
@@ -26,10 +26,9 @@
 <!-- Prism -->
 {% if page.syntaxhighlight != false %}
 <script type="text/javascript">
-  Prism.languages.bash.prompt = /^\$ /m; // Bashの字句解析でPromptの部分「$」もtokenにする
-  // Bashでroot時のプロンプト「~]#」もtokenにする
+  // Bashの字句解析でPromptの部分「$」と「~]#」もtokenにする
   Prism.languages.insertBefore('bash', 'comment', {
-    'prompt': /^\~\]# /m,
+    'prompt': /^\~\]# |^\$ /m,
   })
   // PowerShellの字句解析でPromptの部分「PS>」もtokenにする
   //（デフォルトだとPSがfunctionと判定されるので、insertBeforeで先に評価する）
