prism.js: ps1 == powershell

--- a/_includes/post_scripts.html
+++ b/_includes/post_scripts.html
@@ -35,7 +35,8 @@
   Prism.languages.insertBefore('powershell', 'function', {
     'prompt': /^PS> /m,
   })
-  Prism.languages.vb = Prism.languages.vbnet; // Markdownで言語を「vb」としたときに、Prism.jsの「vbnet」を適用する
+  Prism.languages.vb = Prism.languages.vbnet; // Markdownで言語が「vb」のとき、Prism.jsの「vbnet」を適用する
+  Prism.languages.ps1 = Prism.languages.powershell; // 「ps1」のとき、Prism.sjの「powershell」を適用する
 </script>
 
 <style>
