--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,6 +51,7 @@
 
   <!-- Google Analytics -->
   {% if jekyll.environment == "production" %}
+  <!--
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -58,6 +59,16 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-75892425-1', 'auto');
     ga('send', 'pageview');
+  </script>
+  -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2C4DVG446"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-F2C4DVG446');
   </script>
   {% endif %}
 </head>
