--- a/_includes/head.html
+++ b/_includes/head.html
@@ -62,13 +62,13 @@
   </script>
   -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2C4DVG446"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75892425-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-F2C4DVG446');
+    gtag('config', 'UA-75892425-1');
   </script>
   {% endif %}
 </head>
