--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -6,6 +6,12 @@ layout: headless
 
     <header class="post-header short-diver">
       <h1 class="post-title book-section-title" itemprop="name headline">{{ page.title }}</h1>
+
+      <section class="post-meta">
+        <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
+        on
+        <a href="{{ site.baseurl }}/#{{ page.category | uri_escape | downcase | slugify }}">{{ page.category }}</a>
+      </section>
     </header>
 
     <section class="post-content short-diver book-section-content" itemprop="articleBody">
