--- a/_sass/index-page.scss
+++ b/_sass/index-page.scss
@@ -40,7 +40,8 @@
     }
 }
 
-// --- My Custom CSS -----------------------------------------------------------
+// -----------------------------------------------------------------------------
+// My Custom CSS
 
 h3.category-title {
     padding: 1.2em 0 0 0;
