--- a/_sass/normalize.scss
+++ b/_sass/normalize.scss
@@ -1,7 +1,8 @@
+
 html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%
+    -webkit-text-size-adjust: 100%;
 }
 
 body { 
@@ -208,4 +209,3 @@ td,
 th{ 
     padding: 0; 
 }
-
