--- a/_sass/override.scss
+++ b/_sass/override.scss
@@ -20,6 +20,9 @@ ol {
     }
 }
 
+// -----------------------------------------------------------------------------
+// My Custom CSS
+
 pre, pre[class*="language-"] {
     margin-bottom: 1.8em!important; /* override prism.js css */
 }
