--- a/_includes/ogp.html
+++ b/_includes/ogp.html
@@ -3,7 +3,7 @@
 <meta property="og:type" content="{% if page.title %}article{% else %}website{% endif %}" />
 <meta property="og:image" content="{{ site.url }}/image/chono-mako-bg.jpg" />
 <meta property="og:site_name" content="{{ site.title | escape }}" />
-<meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
+<meta property="og:description" content="{% if page.description %}{{ page.description }}{% else if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
 <meta property="og:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url | replace: '/index.html','/' }}" />
 <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
 <!-- End: Open Graph data -->
