--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,26 +49,32 @@
   </script>
   {% endif %}
 
-  <!-- Google Analytics -->
   {% if jekyll.environment == "production" %}
-  <!--
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-75892425-1', 'auto');
-    ga('send', 'pageview');
-  </script>
-  -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!--   https://developers.google.com/tag-platform/devguides/consent -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75892425-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
 
+    // GDPR for EU
+    gtag('consent', 'default', {
+      'analytics_storage': 'denied',
+      'region': ['BE', 'BG', 'CZ', 'DK', 'DE', 'EE', 'IE', 'GR', 'ES', 'FR', 'HR', 'IT', 'CY', 'LV', 'LT', 'LU', 'HU', 'MT', 'NL', 'AT', 'PL', 'PT', 'RO', 'SI', 'SK', 'FI', 'SE']
+    });
+    gtag('consent', 'default', {
+      'ad_storage': 'denied'
+    });
+
+    gtag('js', new Date());
     gtag('config', 'UA-75892425-1');
+
+    function consentGranted() {
+      gtag('consent', 'update', {
+        'analytics_storage': 'granted',
+        'region': ['BE', 'BG', 'CZ', 'DK', 'DE', 'EE', 'IE', 'GR', 'ES', 'FR', 'HR', 'IT', 'CY', 'LV', 'LT', 'LU', 'HU', 'MT', 'NL', 'AT', 'PL', 'PT', 'RO', 'SI', 'SK', 'FI', 'SE']
+      });
+    }
   </script>
   {% endif %}
 </head>
